--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/banking-app.jpg 1x, ./images/banking-app@2x.jpg 2x"
                 src="./images/banking-app.jpg"
                 alt="Banking App Interface"
                 width="360"
@@ -103,6 +104,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/cashless-payment.jpg 1x, ./images/cashless-payment@2x.jpg 2x"
                 src="./images/cashless-payment.jpg"
                 alt="Cashless payment by phone"
                 width="360"
@@ -122,6 +124,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/meditaion-app.jpg 1x, ./images/meditaion-app@2x.jpg 2x"
                 src="./images/meditaion-app.jpg"
                 alt="Meditation App"
                 width="360"
@@ -141,6 +144,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/taxi-service.jpg 1x, ./images/taxi-service@2x.jpg 2x"
                 src="./images/taxi-service.jpg"
                 alt="Hand on the wheel"
                 width="360"
@@ -160,6 +164,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/screen-illustrations.jpg 1x, ./images/screen-illustrations@2x.jpg 2x"
                 src="./images/screen-illustrations.jpg"
                 alt="Mobile Screen Illustration"
                 width="360"
@@ -179,6 +184,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/online-courses.jpg 1x, ./images/online-courses@2x.jpg 2x"
                 src="./images/online-courses.jpg"
                 alt="The girl is smiling"
                 width="360"
@@ -198,6 +204,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/instagram-stories.jpg 1x, ./images/instagram-stories@2x.jpg 2x"
                 src="./images/instagram-stories.jpg"
                 alt="Examples of Instagram stories"
                 width="360"
@@ -217,6 +224,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/organic-food.jpg 1x, ./images/organic-food@2x.jpg 2x"
                 src="./images/organic-food.jpg"
                 alt="Fruits and vegetables in pouch"
                 width="360"
@@ -236,6 +244,7 @@
             <li class="projects-item">
               <div class="project-image">
                 <img
+                srcset="./images/fresh-coffee.jpg 1x, ./images/fresh-coffee@2x.jpg 2x"
                 src="./images/fresh-coffee.jpg"
                 alt="Cup of coffee"
                 width="360"
