--- a/index.html
+++ b/index.html
@@ -55,6 +55,84 @@
           </ul>
         </address>
       </div>
+
+      <!--Mobile-menu-->
+      <div class="header-container-mobile">
+        <a class="logo link" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
+        <button class="menu-burger js-open-menu" type="button">
+          <svg class="menu-burger-icon" width="32px" height="22px">
+            <use href="./images/icons.svg#menu-burger-icon"></use>
+          </svg>
+        </button>
+      </div>
+
+      <div class="mobile-menu js-menu-container">
+        <button class="modal-close js-close-menu" type="button">
+          <svg class="modal-close-icon" width="8px" height="8px">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-nav">
+          <ul class="mobile-link-list">
+            <li>
+              <a class="mobile-link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="mobile-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="mobile-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="mobile-adress">
+          <ul class="mobile-contact-list">
+            <li>
+              <a class="mobile-contact-tel" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a class="mobile-contact-mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <ul class="list social-list socials-list-mobile">
+          <li class="social-item">
+            <a class="link social-link" href="">
+              <svg class="socials-icon-mobile">
+                <use href="./images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="link social-link" href="">
+              <svg class="socials-icon-mobile">
+                <use href="./images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="link social-link" href="">
+              <svg class="socials-icon-mobile">
+                <use href="./images/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="link social-link" href="">
+              <svg class="socials-icon-mobile">
+                <use href="./images/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
@@ -65,6 +143,7 @@
           <button class="hero-btn" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
+
       <!-- Features -->
       <section class="section features">
         <div class="container">
@@ -121,6 +200,7 @@
           </ul>
         </div>
       </section>
+
       <!-- About -->
       <section class="section about">
         <div class="container">
@@ -128,6 +208,7 @@
           <ul class="list about-list">
             <li class="about-item">
               <img
+                srcset="./images/desktop_version@2x.jpg 2x"
                 src="./images/desktop_version.jpg"
                 alt="desktop version"
                 width="360"
@@ -136,6 +217,7 @@
             </li>
             <li class="about-item">
               <img
+                srcset="./images/mobile_version@2x.jpg 2x"
                 src="./images/mobile_version.jpg"
                 alt="mobile version"
                 width="360"
@@ -144,6 +226,7 @@
             </li>
             <li class="about-item">
               <img
+                srcset="./images/mobile_in_hand@2x.jpg 2x"
                 src="./images/mobile_in_hand.jpg"
                 alt="mobile in hand"
                 width="360"
@@ -153,18 +236,22 @@
           </ul>
         </div>
       </section>
+
       <!-- Team -->
       <section class="section team">
         <div class="container">
           <h2 class="section-title team-title">Our Team</h2>
           <ul class="list team-list">
             <li class="team-item">
+
               <img
+                srcset="./images/mark_guerrero@2x.jpg 2x"
                 src="./images/mark_guerrero.jpg"
                 alt="the man smiles"
                 width="264"
                 height="260"
               />
+              
               <div class="team-card-content">
               <h3 class="section-subtitle name">Mark Guerrero</h3>
               <p class="job">Product Designer</p>
@@ -202,6 +289,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/tom_ford@2x.jpg 2x"
                 src="./images/tom_ford.jpg"
                 alt="the man smiles"
                 width="264"
@@ -244,6 +332,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/camila_garcia@2x.jpg 2x"
                 src="./images/camila_garcia.jpg"
                 alt="the girl smiles"
                 width="264"
@@ -286,6 +375,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/daniel_wilson@2x.jpg 2x"
                 src="./images/daniel_wilson.jpg"
                 alt="the man smiles"
                 width="264"
@@ -331,56 +421,56 @@
       </section>
 
       <!-- Customers -->
-    <section class="section customers">
-      <div class="container">
-        <h2 class="section-title customers-title">Customers</h2>
-        <ul class="list customers-list">
-          <li class="customers-item">
-            <a class="link customers-link" href="">
-              <svg class="customers-icon">
-                <use href="./images/sprite.svg#icon-client1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
+      <section class="section customers">
+        <div class="container">
+          <h2 class="section-title customers-title">Customers</h2>
+          <ul class="list customers-list">
+            <li class="customers-item">
               <a class="link customers-link" href="">
                 <svg class="customers-icon">
-                  <use href="./images/sprite.svg#icon-client2"></use>
+                  <use href="./images/sprite.svg#icon-client1"></use>
                 </svg>
               </a>
-          </li>
-          <li class="customers-item">
-              <a class="link customers-link" href="">
-                <svg class="customers-icon">
-                  <use href="./images/sprite.svg#icon-client3"></use>
-                </svg>
-              </a>
-          </li>
-          <li class="customers-item">
-              <a class="link customers-link" href="">
-                <svg class="customers-icon">
-                  <use href="./images/sprite.svg#icon-client4"></use>
-                </svg>
-              </a>
-          </li>
-          <li class="customers-item">
-              <a class="link customers-link" href="">
-                <svg class="customers-icon">
-                  <use href="./images/sprite.svg#icon-client5"></use>
-                </svg>
-              </a>
-          </li>
-          <li class="customers-item">
-              <a class="link customers-link" href="">
-                <svg class="customers-icon">
-                  <use href="./images/sprite.svg#icon-client6"></use>
-                </svg>
-              </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    </main>
+            </li>
+            <li class="customers-item">
+                <a class="link customers-link" href="">
+                  <svg class="customers-icon">
+                    <use href="./images/sprite.svg#icon-client2"></use>
+                  </svg>
+                </a>
+            </li>
+            <li class="customers-item">
+                <a class="link customers-link" href="">
+                  <svg class="customers-icon">
+                    <use href="./images/sprite.svg#icon-client3"></use>
+                  </svg>
+                </a>
+            </li>
+            <li class="customers-item">
+                <a class="link customers-link" href="">
+                  <svg class="customers-icon">
+                    <use href="./images/sprite.svg#icon-client4"></use>
+                  </svg>
+                </a>
+            </li>
+            <li class="customers-item">
+                <a class="link customers-link" href="">
+                  <svg class="customers-icon">
+                    <use href="./images/sprite.svg#icon-client5"></use>
+                  </svg>
+                </a>
+            </li>
+            <li class="customers-item">
+                <a class="link customers-link" href="">
+                  <svg class="customers-icon">
+                    <use href="./images/sprite.svg#icon-client6"></use>
+                  </svg>
+                </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      </main>
 
     <!-- Footer -->
     <footer class="footer">
@@ -393,6 +483,7 @@
           digital marketing & growth solutions.
         </p>
         </div>
+
         <div class="footer-social-container">
           <p class="footer-social-text">Social media</p>
           <ul class="list footer-social-list">
@@ -426,6 +517,7 @@
             </li>
           </ul>
         </div>
+        
         <div class="footer-subscribe-container">
           <p class="subscribe-title">Subscribe</p>
           <form class="subscribe-form">
@@ -500,6 +592,13 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <!-- <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script> -->
+    <script defer src="./js/mobile-menu.js"></script>
 
   </body>
 </html>
