Update Adaptive Index+Portfolio

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         >
         <button class="menu-burger js-open-menu" type="button">
           <svg class="menu-burger-icon" width="32px" height="22px">
-            <use href="./images/icons.svg#menu-burger-icon"></use>
+            <use href="./images/sprite.svg#icon-icon-menu"></use>
           </svg>
         </button>
       </div>
