--- a/portfolio.html
+++ b/portfolio.html
@@ -54,13 +54,6 @@
             </li>
           </ul>
         </address>
-      </div>
-
-      <!--Mobile-menu-->
-      <div class="header-container-mobile">
-        <a class="logo link" href="./index.html"
-          ><span class="logo-web">Web</span>Studio</a
-        >
         <button class="menu-burger js-open-menu" type="button">
           <svg class="menu-burger-icon" width="32px" height="22px">
             <use href="./images/sprite.svg#icon-icon-menu"></use>
@@ -68,70 +61,73 @@
         </button>
       </div>
 
+      <!--Mobile-menu-->
       <div class="mobile-menu js-menu-container">
-        <button class="modal-close js-close-menu" type="button">
-          <svg class="modal-close-icon" width="8px" height="8px">
-            <use href="./images/sprite.svg#icon-close"></use>
-          </svg>
-        </button>
-        <nav class="mobile-nav">
-          <ul class="mobile-link-list">
-            <li>
-              <a class="mobile-link" href="./index.html">Studio</a>
+        <div class="mobile-menu-container">
+          <button class="modal-close js-close-menu" type="button">
+            <svg class="modal-close-icon" width="8px" height="8px">
+              <use href="./images/sprite.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-nav">
+            <ul class="mobile-link-list">
+              <li>
+                <a class="mobile-link" href="./index.html">Studio</a>
+              </li>
+              <li>
+                <a class="mobile-link current" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li>
+                <a class="mobile-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mobile-adress">
+            <ul class="mobile-contact-list">
+              <li>
+                <a class="mobile-contact-tel" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a class="mobile-contact-mail" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+  
+          <ul class="list social-list socials-list-mobile">
+            <li class="social-item">
+              <a class="link social-link" href="">
+                <svg class="socials-icon-mobile">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="mobile-link" href="./portfolio.html">Portfolio</a>
+            <li class="social-item">
+              <a class="link social-link" href="">
+                <svg class="socials-icon-mobile">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="mobile-link" href="">Contacts</a>
+            <li class="social-item">
+              <a class="link social-link" href="">
+                <svg class="socials-icon-mobile">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="link social-link" href="">
+                <svg class="socials-icon-mobile">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </nav>
-        <address class="mobile-adress">
-          <ul class="mobile-contact-list">
-            <li>
-              <a class="mobile-contact-tel" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-            <li>
-              <a class="mobile-contact-mail" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-          </ul>
-        </address>
-
-        <ul class="list social-list socials-list-mobile">
-          <li class="social-item">
-            <a class="link social-link" href="">
-              <svg class="socials-icon-mobile">
-                <use href="./images/sprite.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="link social-link" href="">
-              <svg class="socials-icon-mobile">
-                <use href="./images/sprite.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="link social-link" href="">
-              <svg class="socials-icon-mobile">
-                <use href="./images/sprite.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="link social-link" href="">
-              <svg class="socials-icon-mobile">
-                <use href="./images/sprite.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
 
@@ -483,12 +479,12 @@
     </div>
 
     <script src="./js/modal.js"></script>
-    <!-- <script
+    <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
     <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
